creating a website with css and html

--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>La Phranses Beauty</title>
+    <link rel="icon" type="image/x-icon" href="images/favicon.jpeg" />
     <link rel="stylesheet" href="styles.css" />
-    <link rel="icon" type="image/x-icon" href="/images/favicon.ico" />
   </head>
   <body style="animation-name: example; animation-duration: 20s" id="click">
     <!--nav bar-->
     <div id="head">
       <nav>
-        <img id="logo" src="/images/logo.png" alt="logo" />
+        <img id="logo" src="images/logo.png" alt="logo" />
         <a class="bar1" href="#home"> <b> Home </b> </a>
         <a class="bar2" href="#makeup"> <b> Makeup </b> </a>
         <a class="bar3" href="#price"> <b> Price</b> </a>
